// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-stepper should render with custom props 1`] = `
<modus-wc-stepper custom-class="custom-class" orientation="vertical">
  <ul class="custom-class modus-wc-steps modus-wc-steps-vertical">
    <li class="modus-wc-step modus-wc-step-primary">
      <div class="modus-wc-stepper-step-text">
        <span class="modus-wc-stepper-step-label">
          Scale
        </span>
        <span class="modus-wc-stepper-step-sublabel">
          Confirm details
        </span>
      </div>
    </li>
    <li class="custom-class modus-wc-step modus-wc-step-primary">
      <div class="modus-wc-stepper-step-text">
        <span class="modus-wc-stepper-step-label">
          Belong
        </span>
      </div>
    </li>
    <li class="modus-wc-step modus-wc-step-warning">
      <div class="modus-wc-stepper-step-text">
        <span class="modus-wc-stepper-step-label">
          Grow
        </span>
      </div>
    </li>
    <li class="modus-wc-step" data-content="🚀">
      <div class="modus-wc-stepper-step-text">
        <span class="modus-wc-stepper-step-label">
          Innovate
        </span>
      </div>
    </li>
  </ul>
</modus-wc-stepper>
`;

exports[`modus-wc-stepper should render with default props 1`] = `
<modus-wc-stepper>
  <ul class="modus-wc-steps">
    <li class="modus-wc-step modus-wc-step-primary">
      <div class="modus-wc-stepper-step-text">
        <span class="modus-wc-stepper-step-label">
          Scale
        </span>
        <span class="modus-wc-stepper-step-sublabel">
          Confirm details
        </span>
      </div>
    </li>
    <li class="custom-class modus-wc-step modus-wc-step-primary">
      <div class="modus-wc-stepper-step-text">
        <span class="modus-wc-stepper-step-label">
          Belong
        </span>
      </div>
    </li>
    <li class="modus-wc-step modus-wc-step-warning">
      <div class="modus-wc-stepper-step-text">
        <span class="modus-wc-stepper-step-label">
          Grow
        </span>
      </div>
    </li>
    <li class="modus-wc-step" data-content="🚀">
      <div class="modus-wc-stepper-step-text">
        <span class="modus-wc-stepper-step-label">
          Innovate
        </span>
      </div>
    </li>
  </ul>
</modus-wc-stepper>
`;
